@@ -76,6 +76,18 @@
   <translation type="gettext">gnome-calculator</translation>
   <content_rating type="oars-1.1" />
   <releases>
+    <release version="45~beta" date="2023-08-03" type="development">
+      <description>
+        <p>Overview of changes in gnome-calculator 45.beta</p>
+        <ul>
+          <li>Updated translations</li>
+          <li>Fixed variable and function popover reverse typing #335, #320 (Robert Roth)</li>
+          <li>Better left/right cursor key handling !153 (Seth Falco)</li>
+          <li>Improved toolbar using Adwaita library !151 (Felipe Kinoshita)</li>
+          <li>Flatpak build improvements (Robert Roth)</li>
+        </ul>
+      </description>
+    </release>
     <release version="45~alpha" date="2023-06-28" type="development">
       <description>
         <p>Overview of changes in gnome-calculator 45.alpha</p>
