@@ -1,3 +1,10 @@
+Overview of changes in gnome-calculator 45.beta
+    * Updated translations
+    * Fixed variable and function popover reverse typing #335, #320 (Robert Roth)
+    * Better left/right cursor key handling !153 (Seth Falco)
+    * Improved toolbar using Adwaita library !151 (Felipe Kinoshita)
+    * Flatpak build improvements (Robert Roth)
+
 Overview of changes in gnome-calculator 45.alpha
     * Updated translations
     * Remember window size #328 !146 (Leonard K, Alice Mikhaylenko)
